# BOSSHazardAdaptiveEngine

./: .gitignore  CMakeLists.txt
Scripts/: runRelease.sh  runTests.sh  stripDebug.sh  updateAndRunTests.sh
Source/: BOSSExpressionConversions.hpp  BOSSHazardAdaptiveEngine.cpp  CoreCandidates.hpp  HazardAdaptiveEngine.cpp  HazardAdaptiveEngine.hpp  Types.hpp  VolcanoEngine.cpp  VolcanoEngine.hpp  Win32Boilerplate.cpp  config.cpp  config.hpp  engineInstanceState.hpp  engineLifecycle.cpp  libraryLifecycle.cpp
Source/RelationalOps/: Join.hpp  Operator.hpp  Project.hpp  Relation.hpp  Select.hpp  Top.hpp
Source/constants/: groupQueries.hpp  machineConstants.cpp  machineConstants.hpp  machineConstantsImplementation.hpp
Source/lazy_hash_map/: lazy_initialisation_array.h  robin_growth_policy.h  robin_hash.h  robin_map.h
Source/operators/: group.cpp  group.hpp  groupImplementation.hpp  join.hpp  joinImplementation.hpp  operatorStats.hpp  partition.cpp  partition.hpp  partitionImplementation.hpp  select.cpp  select.hpp  selectImplementation.hpp
Source/utilities/: dataGeneration.hpp  dataGenerationImplementation.hpp  dataStructures.hpp  memory.hpp  papiWrapper.cpp  papiWrapper.hpp  sharedDataTypes.cpp  sharedDataTypes.hpp  systemInformation.cpp  systemInformation.hpp  utilities.cpp  utilities.h  utilities.hpp
Tests/: BOSSHazardAdaptiveTests.cpp  BOSSTests.cpp
